# d

./: Cargo.toml  d.nix  example_config.toml  flake.nix  justfile
_old/: d.nix
_old/src/lib/commands/: command-d  command-n
_old/src/lib/sessions/: dotfiles-session  gh-dash-session  home-session  notes-session  scratchpad-session
_old/src/lib/windows/: git-window  htop-window  neofetch-window  ssh-window  windows-core
nix/modules/: devshell.nix  formatting.nix  rust.nix
src/: main.rs
src/lib/: logger
src/lib/cloners/: clone-fnf-random  clone-where-am-i.nvim.sh
src/lib/commands/: command-.  command-binwarden  command-d  command-exoticboogers  command-fnf-random  command-gh  command-h  command-i  command-n  command-news  command-provision  command-slack  command-ssh  command-where-am-i
src/lib/sessions/: binwarden-session  comms-session  core-session  d-session  exoticboogers-session  fnf-random-session  htop-session  neofetch-session  newsboat-session  slack-session  ssh-dev-session  where-am-i-session
src/lib/windows/: editor-window  run-window  scratchpad-window
